<resources>
    <string name="app_name">GraphCoderCalc</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnTimes">*</string>
    <string name="btnDivide">/</string>
    <string name="btnPercent">%</string>
    <string name="btnDot">.</string>
    <string name="cursorLeft">←</string>
    <string name="cursorRight">→</string>
    <string name="backspace">⌫</string>
    <string name="confirm">✓</string>
    <string name="btnFunction">f(x)</string>
    <string name="btnNumbers">123</string>
    <string name="formula">f(x)=</string>
    <string name="editFormula"></string>
    <string name="btnSin">sin</string>
    <string name="btnCos">cos</string>
    <string name="btnTan">tan</string>
    <string name="btnASin">asin</string>
    <string name="btnACos">acos</string>
    <string name="btnATan">atan</string>
    <string name="btnLN">ln</string>
    <string name="btnLog10">log10</string>
    <string name="btnPow">^</string>
    <string name="btnSqrt">√</string>
    <string name="btnOpnParsis">(</string>
    <string name="btnClsParsis">)</string>
    <string name="btnX">x</string>
    <string name="btnPi">π</string>
    <string name="btnEuler">e</string>
    <string name="btnAbs">|x|</string>
    <string name="btnDEC">DEC</string>
    <string name="btnOCT">OCT</string>
    <string name="btnHEX">HEX</string>
    <string name="btnA">A</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnE">E</string>
    <string name="btnF">F</string>


</resources>
