<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSin" />

        <Button
            android:id="@+id/btACos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnACos" />

        <Button
            android:id="@+id/btPow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPow" />

        <Button
        android:id="@+id/btX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnX" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCos" />

        <Button
            android:id="@+id/btATan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/btnATan" />

        <Button
            android:id="@+id/btSqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSqrt" />

        <Button
            android:id="@+id/btPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btTan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnTan" />

        <Button
            android:id="@+id/btLN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLN" />

        <Button
            android:id="@+id/btOpnPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOpnParsis" />

        <Button
            android:id="@+id/btEuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEuler" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btASin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnASin" />

        <Button
            android:id="@+id/btLog10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLog10" />

        <Button
            android:id="@+id/btClsPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnClsParsis" />

        <Button
            android:id="@+id/btAbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAbs" />

    </LinearLayout>




</LinearLayout>