<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="202dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none|text"
        android:text="@string/editFormula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/formula"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />


    <RelativeLayout
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_editor_absoluteX="96dp">

        <Button
            android:id="@+id/btArrLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cursorLeft"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/btArrRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btArrLeft"
            android:text="@string/cursorRight"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/btBackspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btArrRight"
            android:text="@string/backspace"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btBackspace"
            android:text="@string/confirm"
            tools:layout_editor_absoluteX="272dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btArrLeft"
            android:layout_marginStart="-94dp"
            android:layout_toEndOf="@+id/btBackspace"
            android:text="Button" />

        <Button
            android:id="@+id/button15"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btArrLeft"
            android:text="Button" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/numberLayout"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/bt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt4"
            android:layout_toEndOf="@+id/bt4"
            android:text="@string/btn8"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="379dp" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt8"
            android:layout_toEndOf="@+id/bt4"
            android:text="@string/btn5"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="503dp" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt1"
            android:text="@string/btn4"
            app:layout_constraintTop_toBottomOf="@+id/bt1"
            tools:layout_editor_absoluteX="4dp" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <Button
            android:id="@+id/bt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt4"
            android:layout_marginTop="0dp"
            android:text="@string/btn7"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bt4"
            android:text="@string/btn2"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/bt2"
            android:text="@string/btn3"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bt3"
            android:layout_alignTop="@+id/bt4"
            android:text="@string/btn6"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="339dp" />

        <Button
            android:id="@+id/bt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bt3"
            android:layout_below="@+id/bt4"
            android:text="@string/btn9"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/btPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bt3"
            android:text="@string/btnPlus" />

        <Button
            android:id="@+id/btMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bt4"
            android:layout_toEndOf="@+id/bt3"
            android:text="@string/btnMinus" />

        <Button
            android:id="@+id/btTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt4"
            android:layout_toEndOf="@+id/bt3"
            android:text="@string/btnTimes" />

        <Button
            android:id="@+id/btDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt7"
            android:text="@string/btnDot" />

        <Button
            android:id="@+id/bt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt7"
            android:layout_toEndOf="@+id/bt4"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bt3"
            android:layout_below="@+id/bt7"
            android:text="@string/btnPercent" />

        <Button
            android:id="@+id/btDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt7"
            android:layout_toEndOf="@+id/bt3"
            android:text="@string/btnDivide" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>